Document clustering feature generation in README
Added details about the completed clustering module, including CK-Means and class-safe clustering steps, feature engineering, nominal conversion, and dataset augmentation.